# poopyrus-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: auth.py  conftest.py  main.py  models.py  settings.py
app/routers/auth/: auth.py  models.py
app/routers/logs/: logs.py  models.py  test_logs.py
app/routers/pets/: models.py  pets.py  test_pets.py
app/utilities/: clients.py  log.py
infra/: deployment.yaml  svc.yaml
infra/ingress/: cert.yaml  frontend.yaml  ingress.yaml
